# price_parser

./: .env  .env.example  .gitignore  README.md  proxy_pool.txt  pyproject.toml  requirements.txt  run_bot.py
data/: price_parser.db
scripts/: test_proxies.py
src/price_parser/: __init__.py  bot.py  browser.py  charting.py  config.py  db.py  main.py  models.py  monitoring.py  query_profiles.py
src/price_parser/marketplaces/: __init__.py  base.py  ozon.py  wb.py  yandex_market.py
tests/: test_availability_filters.py  test_config.py  test_schedule_commands.py
